Theme up tabs, colors, fonts, do some overflow fixes.

--- a/portfolio/themes/waxo_gray/scss/_elements.scss
+++ b/portfolio/themes/waxo_gray/scss/_elements.scss
@@ -1,5 +1,5 @@
 /**
- * Styles defining how various system parts display.
+ * Basic element styling.
  */
 
 body {
@@ -7,10 +7,6 @@ body {
   font-family: $body-font;
   font-weight: 400;
   margin: 0;
-
-  strong {
-    font-weight: 700;
-  }
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -19,5 +15,19 @@ h1, h2, h3, h4, h5, h6 {
 
   strong {
     font-weight: 400;
+  }
+}
+
+strong {
+  font-weight: 700;
+}
+
+a,
+a:visited,
+a:active {
+  color: palette($colors, blue, medium);
+
+  &:hover {
+    color: palette($colors, blue, light);
   }
 }
